--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  generic_bloc_provider: ^1.1.0
   flutter:
     sdk: flutter
 
@@ -89,3 +90,4 @@ flutter:
     - family: Lato
       fonts:
       - asset: fonts/Lato-Regular.ttf
+    
