--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  firebase_auth:
+  firebase_auth: ^0.20.1
   google_sign_in:
   firebase_storage: ^7.0.0
-  cloud_firestore: ^0.16.0
+  cloud_firestore: ^0.16.0+1
+  firebase_core: ^0.7.0
 
 dev_dependencies:
   flutter_test:
