--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  firebase_auth: ^0.20.1
-  google_sign_in:
-  firebase_storage: ^7.0.0
-  cloud_firestore: ^0.16.0+1
-  firebase_core: ^0.7.0
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^1.0.0
+  google_sign_in: ^5.0.0
+  firebase_storage: ^8.0.0
+  cloud_firestore: ^1.0.0
+  firebase_core: ^1.0.0
+  image_picker: ^0.7.2
 
 dev_dependencies:
   flutter_test:
