--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cloud_firestore: ^1.0.0
   firebase_core: ^1.0.0
   image_picker: ^0.7.2
+  cached_network_image: ^2.5.1
 
 dev_dependencies:
   flutter_test:
